# letai-casework-app

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/src/letai_factbase/: __init__.py  main.py  models.py  schemas.py
backend/src/letai_factbase/api/: routes.py
backend/src/letai_factbase/core/: config.py
backend/src/letai_factbase/db/: session.py
backend/src/letai_factbase/services/: candidates.py  fact_gateway.py  importer.py  llm_extractor.py  ocr.py  page_renderer.py  parser.py  redaction.py  review.py  vault_export.py
backend/tests/: test_candidate_flow.py  test_contracts.py  test_docx_parse.py  test_idempotency.py  test_llm_extraction.py  test_ocr_run.py  test_page_render.py  test_pdf_parse.py  test_source_import.py  test_text_parse.py  test_xlsx_parse.py
docs/: architecture_v0.1.md  decision_log.md  development_log.md  product_spec_v0.1.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/static/: index.html
schemas/: agent-context-pack.schema.json  fact-candidate.schema.json
