[project]
name = "letai-factbase"
version = "0.1.0"
description = "Local source-grounded factbase for Letai casework"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.19",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.0",
  "pillow>=10.0.0",
  "python-docx>=1.2.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
ocr = [
  "opencv-python>=4.9.0",
  "paddleocr>=2.7.0",
  "pytesseract>=0.3.13",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
